python code intialised

--- a/View/Add.html
+++ b/View/Add.html
@@ -57,8 +57,8 @@
 <!-- Main -->
 <section id="main" class="container">
     <header>
-        <h2>Add a Command</h2>
-        <p>Just an assorted selection of elements.</p>
+        <h2>Add a term</h2>
+        <p>Add Special terms that you wanna recognise</p>
     </header>
 
 
@@ -71,25 +71,25 @@
                 <form method="post" action="#">
                     <div class="row uniform 50%">
                         <div class="6u 12u(mobilep)">
-                            <input type="text" name="name" id="name" value="" placeholder="Name" />
+                            <input type="text" name="name" id="name" value="" placeholder="Term_Name" />
                         </div>
                         <div class="6u 12u(mobilep)">
                             <input type="email" name="email" id="email" value="" placeholder="Email" />
                         </div>
                     </div>
-                    <div class="row uniform 50%">
-                        <div class="12u">
-                            <div class="select-wrapper">
-                                <select name="category" id="category">
-                                    <option value="">- Category -</option>
-                                    <option value="1">Manufacturing</option>
-                                    <option value="1">Shipping</option>
-                                    <option value="1">Administration</option>
-                                    <option value="1">Human Resources</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
+                    <!--<div class="row uniform 50%">-->
+                        <!--<div class="12u">-->
+                            <!--<div class="select-wrapper">-->
+                                <!--<select name="category" id="category">-->
+                                    <!--<option value="">- Category -</option>-->
+                                    <!--<option value="1">Manufacturing</option>-->
+                                    <!--<option value="1">Shipping</option>-->
+                                    <!--<option value="1">Administration</option>-->
+                                    <!--<option value="1">Human Resources</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="row uniform 50%">
                         <div class="4u 12u(narrower)">
                             <input type="radio" id="priority-low" name="priority" checked>
