datbase search and create aadded

--- a/View/addCommand.html
+++ b/View/addCommand.html
@@ -86,8 +86,8 @@
 <!-- Main -->
 <section id="main" class="container">
     <header>
-        <h2>Add a term</h2>
-        <p>Add Special terms that you wanna recognise</p>
+        <h2>Create a Command</h2>
+        <p>Command that runs some script</p>
     </header>
 
 
@@ -101,16 +101,13 @@
                     <div id='rows'>
                         <div class="row uniform 50%">
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="name" id="name" value="" placeholder="Term Name" />
+                                <input type="text" name="commandName" id="commandName" value="" placeholder="Command Name" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="command" id="command" value="" placeholder="command" />
+                                <input type="text" name="webpage" id="webpage" value="" placeholder="webpage redirect" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="synonyms" id="synonyms" value="" placeholder="synonyms" />
-                            </div>
-                            <div class="6u 12u(mobilep)">
-                                <input type="text" name="description" id="description" value="" placeholder="description" />
+                                <input type="text" name="parameters" id="parameters" value="" placeholder="(Optional) Parameters" />
                             </div>
 
                             <!--<div class="12u 12u(mobilep)">-->
@@ -118,54 +115,13 @@
                             <!--</div>-->
                         </div>
                     </div>
-                    <!--&lt;!&ndash;<div class="row uniform 50%">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<div class="12u">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<div class="select-wrapper">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<select name="category" id="category">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="">- Category -</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Manufacturing</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Shipping</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Administration</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Human Resources</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</select>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-low" name="priority" checked>-->
-                    <!--<label for="priority-low">Low Priority</label>-->
-                    <!--</div>-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-normal" name="priority">-->
-                    <!--<label for="priority-normal">Normal Priority</label>-->
-                    <!--</div>-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-high" name="priority">-->
-                    <!--<label for="priority-high">High Priority</label>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="6u 12u(narrower)">-->
-                    <!--<input type="checkbox" id="copy" name="copy">-->
-                    <!--<label for="copy">Email me a copy of this message</label>-->
-                    <!--</div>-->
-                    <!--<div class="6u 12u(narrower)">-->
-                    <!--<input type="checkbox" id="human" name="human" checked>-->
-                    <!--<label for="human">I am a human and not a robot</label>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="12u">-->
-                    <!--<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>-->
-                    <!--</div>-->
-                    <!--</div>-->
+
                     <br>
                     <br>
                     <div class="row uniform">
                         <div class="12u">
                             <ul class="actions">
-                                <li><input type="submit" value="Send Message" name="action" /></li>
+                                <li><input type="submit" value="Submit" name="action" /></li>
                                 <li><input type="reset" value="Reset" class="alt" /></li>
                             </ul>
                         </div>
