--- a/View/Add.html
+++ b/View/Add.html
@@ -101,13 +101,13 @@
                     <div id='rows'>
                         <div class="row uniform 50%">
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="name" id="name" value="" placeholder="Term Name" />
+                                <input type="text" name="command" id="command" value="" placeholder="Command Name" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="command" id="command" value="" placeholder="command" />
+                                <input type="text" name="action" id="action" value="" placeholder="action" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="synonyms" id="synonyms" value="" placeholder="synonyms" />
+                                <input type="text" name="parameters" id="parameters" value="" placeholder="parameters seperated by semicolon" />
                             </div>
                             <div class="6u 12u(mobilep)">
                                 <input type="text" name="description" id="description" value="" placeholder="description" />
