Fixing webpage look

--- a/View/Add.html
+++ b/View/Add.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Elements - Alpha by HTML5 UP</title>
+    <title>The AI Valet</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -57,28 +57,11 @@
 
 <!-- Header -->
 <header id="header" class="skel-layers-fixed">
-    <h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+    <h1><a href="/">The AI Valet</a></h1>
     <nav id="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="" class="icon fa-angle-down">Layouts</a>
-                <ul>
-                    <li><a href="generic.html">Generic</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="elements.html">Elements</a></li>
-                    <li>
-                        <a href="">Submenu</a>
-                        <ul>
-                            <li><a href="#">Option One</a></li>
-                            <li><a href="#">Option Two</a></li>
-                            <li><a href="#">Option Three</a></li>
-                            <li><a href="#">Option Four</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li><a href="#" class="button">Sign Up</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="Add">Add Command</a></li>
         </ul>
     </nav>
 </header>
@@ -96,76 +79,31 @@
 
             <!-- Form -->
             <section class="box">
-                <h3>Form</h3>
+                <h3>New Command</h3>
                 <form method="post" action="#" name="form">
                     <div id='rows'>
                         <div class="row uniform 50%">
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="command" id="command" value="" placeholder="Command Name" />
+                                <input type="text" name="command" id="command" value="" placeholder="Command name" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="action" id="action" value="" placeholder="action" />
+                                <input type="text" name="action" id="action" value="" placeholder="Action" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="parameters" id="parameters" value="" placeholder="parameters seperated by semicolon" />
+                                <input type="text" name="parameters" id="parameters" value="" placeholder="Parameters separated by semicolon" />
                             </div>
                             <div class="6u 12u(mobilep)">
-                                <input type="text" name="description" id="description" value="" placeholder="description" />
+                                <input type="text" name="description" id="description" value="" placeholder="Description" />
                             </div>
 
-                            <!--<div class="12u 12u(mobilep)">-->
-                                <!--<input type="button" name="addElement" id="addElement" value="+"  />-->
-                            <!--</div>-->
                         </div>
                     </div>
-                    <!--&lt;!&ndash;<div class="row uniform 50%">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<div class="12u">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<div class="select-wrapper">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<select name="category" id="category">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="">- Category -</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Manufacturing</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Shipping</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Administration</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<option value="1">Human Resources</option>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</select>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-low" name="priority" checked>-->
-                    <!--<label for="priority-low">Low Priority</label>-->
-                    <!--</div>-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-normal" name="priority">-->
-                    <!--<label for="priority-normal">Normal Priority</label>-->
-                    <!--</div>-->
-                    <!--<div class="4u 12u(narrower)">-->
-                    <!--<input type="radio" id="priority-high" name="priority">-->
-                    <!--<label for="priority-high">High Priority</label>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="6u 12u(narrower)">-->
-                    <!--<input type="checkbox" id="copy" name="copy">-->
-                    <!--<label for="copy">Email me a copy of this message</label>-->
-                    <!--</div>-->
-                    <!--<div class="6u 12u(narrower)">-->
-                    <!--<input type="checkbox" id="human" name="human" checked>-->
-                    <!--<label for="human">I am a human and not a robot</label>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row uniform 50%">-->
-                    <!--<div class="12u">-->
-                    <!--<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <br>
+                     <br>
                     <br>
                     <div class="row uniform">
                         <div class="12u">
                             <ul class="actions">
-                                <li><input type="submit" value="Send Message" name="action" /></li>
+                                    <li><input type="submit" value="Add" name="action" /></li>
                                 <li><input type="reset" value="Reset" class="alt" /></li>
                             </ul>
                         </div>
@@ -173,7 +111,7 @@
                 </form>
 
                 <hr />
-
+<!--
                 <form method="post" action="#">
                     <div class="row uniform 50%">
                         <div class="9u 12u(mobilep)">
@@ -183,7 +121,7 @@
                             <input type="submit" value="Search" class="fit"  />
                         </div>
                     </div>
-                </form>
+                </form>-->
             </section>
 
         </div>
@@ -202,7 +140,7 @@
         <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
     </ul>
     <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; The AI Valet. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
 </footer>
 
