--- a/View/index.html
+++ b/View/index.html
@@ -29,52 +29,21 @@
 
 <!-- Header -->
 <header id="header" class="alt">
-    <h1><a href="index.html">The AI Valet</a></h1>
+    <h1><a href="/">The AI Valet</a></h1>
     <nav id="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="" class="icon fa-angle-down">Layouts</a>
-                <ul>
-                    <li><a href="generic.html">Generic</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="elements.html">Elements</a></li>
-                    <li>
-                        <a href="">Submenu</a>
-                        <ul>
-                            <li><a href="#">Option One</a></li>
-                            <li><a href="#">Option Two</a></li>
-                            <li><a href="#">Option Three</a></li>
-                            <li><a href="#">Option Four</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li><a href="#">Sign in</a></li>
-            <!--<li><a href="#" class="button">Sign Up</a></li>-->
+            <li><a href="/">Home</a></li>
+            <li><a href="Add">Add Command</a></li>
         </ul>
     </nav>
 </header>
 
-<!-- Banner -->
-
-<!--
-<section id="banner">
-<h2>The AI valet</h2>
-<p>Allows you to create personalised voice commands for your own tasks.</p>
-<ul class="actions">
-<li><a href="#" class="button special">Sign Up</a></li>
-<li><a href="#" class="button">Learn More</a></li>
-</ul>
-</section>
--->
 
 <section id="banner">
-    <h2>The AI valet</h2>
+    <h2>The AI Valet</h2>
     <p>Allows you to create personalised voice commands for your own tasks.</p>
     <ul class="actions">
         <li><input id="input" type="text"> </li>
-        <!--<input type="text" name="name" id="name" value="" placeholder="Name" />-->
         <li><button id="rec" class="button">Speak</button> </li>
     </ul>
 </section>
@@ -87,84 +56,10 @@
             <h2>Introducing the ultimate mobile app
                 <br />
                 for doing stuff with your phone</h2>
-            <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-                adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+            <p>Quia cum app mobile phone faciens vasa ultima Introducing.</p>
         </header>
         <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
     </section>
-
-    <section class="box special features">
-        <div class="features-row">
-            <section>
-                <span class="icon major fa-bolt accent2"></span>
-                <h3>Magna etiam</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-            </section>
-            <section>
-                <span class="icon major fa-area-chart accent3"></span>
-                <h3>Ipsum dolor</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-            </section>
-        </div>
-        <div class="features-row">
-            <section>
-                <span class="icon major fa-cloud accent4"></span>
-                <h3>Sed feugiat</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-            </section>
-            <section>
-                <span class="icon major fa-lock accent5"></span>
-                <h3>Enim phasellus</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-            </section>
-        </div>
-    </section>
-
-    <div class="row">
-        <div class="6u 12u(narrower)">
-
-            <section class="box special">
-                <span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-                <h3>Sed lorem adipiscing</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-                <ul class="actions">
-                    <li><a href="#" class="button alt">Learn More</a></li>
-                </ul>
-            </section>
-
-        </div>
-        <div class="6u 12u(narrower)">
-
-            <section class="box special">
-                <span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-                <h3>Accumsan integer</h3>
-                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-                <ul class="actions">
-                    <li><a href="#" class="button alt">Learn More</a></li>
-                </ul>
-            </section>
-
-        </div>
-    </div>
-
-</section>
-
-<!-- CTA -->
-<section id="cta">
-
-    <h2>Sign up for beta access</h2>
-    <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-    <form>
-        <div class="row uniform 50%">
-            <div class="8u 12u(mobilep)">
-                <input type="email" name="email" id="email" placeholder="Email Address" />
-            </div>
-            <div class="4u 12u(mobilep)">
-                <input type="submit" value="Sign Up" class="fit" />
-            </div>
-        </div>
-    </form>
 
 </section>
 
@@ -179,7 +74,7 @@
         <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
     </ul>
     <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; The AI Valet. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
 </footer>
 
