--- a/View/Add.html
+++ b/View/Add.html
@@ -134,10 +134,7 @@
     <ul class="icons">
         <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
         <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-        <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-        <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+        <li><a href="https://github.com/paritosh-gupta/cs275-project" class="icon fa-github"><span class="label">Github</span></a></li>
     </ul>
     <ul class="copyright">
         <li>&copy; The AI Valet. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
