Slight modification of index page

--- a/View/index.html
+++ b/View/index.html
@@ -58,7 +58,7 @@
                 for doing stuff with your phone</h2>
             <p>Quia cum app mobile phone faciens vasa ultima Introducing.</p>
         </header>
-        <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+        <!--<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>-->
     </section>
 
 </section>
